# okta-lifecycle-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: rbac_rules.yml  sample_hris_data.json  scim_app_registry.yml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  demo-data.ts  hooks.ts  index.css  types.ts
dashboard/src/components/: AccessDiffView.tsx  AuditCharts.tsx  DetailPanel.tsx  EventTimeline.tsx  KPICards.tsx  Pipeline.tsx  Sidebar.tsx  UserCard.tsx
engine/: __init__.py  audit_checker.py  cli.py  event_log.py  event_router.py  metrics.py  models.py  okta_client.py  rbac_resolver.py  scim_provisioner.py
mock_scim/: __init__.py  server.py  store.py
mock_scim/apps/: __init__.py  github.py  google_workspace.py  slack.py  zoom.py
tests/: test_audit_checker.py  test_event_router.py  test_rbac_resolver.py  test_scim_server.py
